Updated config examples for new module locations

--- a/cfg_examples/cisco/cisco_router_plugin.ini
+++ b/cfg_examples/cisco/cisco_router_plugin.ini
@@ -89,7 +89,7 @@ others=def,xyz
 [asr:10.1.10.252]
 name=ASR-A
 username = admin
-password = !cisco123
+password = password
 ssh_port = 22
 target_intf = Port-channel10
 order = 0
@@ -97,7 +97,7 @@ order = 0
 [asr:10.1.10.253]
 name=ASR-B
 username = admin
-password = !cisco123
+password = password
 ssh_port = 22
 target_intf = Port-channel11
 order = 1
