--- a/cfg_examples/neutron.conf
+++ b/cfg_examples/neutron.conf
@@ -69,7 +69,7 @@ core_plugin =neutron.plugins.ml2.plugin.Ml2Plugin
 # service_plugins =
 #service_plugins =neutron.services.l3_router.l3_router_plugin.L3RouterPlugin,neutron.services.firewall.fwaas_plugin.FirewallPlugin
 # Example: service_plugins = router,firewall,lbaas,vpnaas,metering
-service_plugins = neutron.plugins.cisco.service_plugins.cisco_router_plugin.PhysicalCiscoRouterPlugin,neutron.services.firewall.fwaas_plugin.FirewallPlugin
+service_plugins = neutron.plugins.cisco.service_plugins.asr_cisco_router_plugin.PhysicalCiscoRouterPlugin,neutron.services.firewall.fwaas_plugin.FirewallPlugin
 
 # Paste configuration file
 # api_paste_config = /usr/share/neutron/api-paste.ini
