--- a/cfg_examples/cisco/cisco_cfg_agent.ini
+++ b/cfg_examples/cisco/cisco_cfg_agent.ini
@@ -5,7 +5,7 @@
 # rpc_loop_interval = 10
 
 # (StrOpt) Period-separated module path to the routing service helper class.
-# routing_svc_helper_class = neutron.plugins.cisco.cfg_agent.service_helpers.routing_svc_helper.RoutingServiceHelper
+routing_svc_helper_class = neutron.plugins.cisco.cfg_agent.service_helpers.asr_routing_svc_helper.RoutingServiceHelperWithPhyContext
 
 # (IntOpt) Timeout value in seconds for connecting to a hosting device.
 # device_connection_timeout = 30
