--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,6 @@
 [tox]
+indexserver =
+    default = https://devpi.metacloud.com/mc/2014.1.1
 envlist = py26,py27,py33,pep8
 minversion = 1.6
 skipsdist = True
