Multi-thread unit tests
Change-Id: I9ea57026af4ae3f6845150801fffeb86c8dd2b26

--- a/tox.ini
+++ b/tox.ini
@@ -11,11 +11,14 @@ skipsdist = True
 setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
 usedevelop = True
+whitelist_externals = bash
+                      find
 install_command = pip install -U {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-  python -m neutron.openstack.common.lockutils python setup.py testr --slowest --testr-args='{posargs}'
+  find . -type f -name "*.pyc" -delete
+  bash tools/pretty_tox.sh '{posargs}'
 
 [testenv:hashtest]
 # This is the same as default environment, but with a random PYTHONHASHSEED.
