--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Routes==1.12.3
 anyjson==0.3.3
 argparse # provided by python in ubuntu
 Babel==1.3
+ciscoconfparse==1.2.25
 eventlet==0.16.1
 greenlet==0.4.2
 httplib2==0.9
@@ -17,6 +18,7 @@ iso8601==0.1.10
 jsonrpclib==0.1.3
 Jinja2==2.7.3
 keystonemiddleware==1.3.1
+ncclient==0.4.3
 netaddr==0.7.13
 python-neutronclient==2.3.9
 SQLAlchemy==0.9.8
