Add ARP spoofing protection for LinuxBridge
This patch adds ARP spoofing protection for the Linux Bridge
agent based on ebtables.

The protection works by setting up an ebtables chain for each port
and jumping all ARP traffic to that chain. The port-specific chains
have a default DROP policy and then have allow rules installed that
only allow ARP traffic with a source CIDR that matches one of the
port's fixed IPs or an allowed address pair.

NOTE: All OVS related items have been dropped from the patch due
to the fact that juno is missing a number of OVS related features
that the patch builds upon. Since we don't support OVS its not
worth the effort to back port all the over OVS bits just to make
this work.

Upstream Review: https://review.openstack.org/196986
Upstream Change-Id: I0b0e3b1272472385dff060897ecbd25e93fd78e7
Upstream Bug: #1274034
Fixes: OPENSTACK-1663

Change-Id: I5e3dee0cbd4a212aa987c00ea6a3b7e28f4d966e

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ data_files =
         etc/neutron/rootwrap.d/debug.filters
         etc/neutron/rootwrap.d/dhcp.filters
         etc/neutron/rootwrap.d/iptables-firewall.filters
+        etc/neutron/rootwrap.d/etables.filters
         etc/neutron/rootwrap.d/ipset-firewall.filters
         etc/neutron/rootwrap.d/l3.filters
         etc/neutron/rootwrap.d/lbaas-haproxy.filters
