--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
 pbr>=0.6,<1.0
+ipaddr>=2.1.9
 
 Paste
 PasteDeploy>=1.5.0
 Routes>=1.12.3,!=2.0
 anyjson>=0.3.3
 argparse
-Babel>=1.3
+Babel==0.9.6
 eventlet>=0.13.0
 greenlet>=0.3.2
 httplib2>=0.7.5
 requests>=1.1
-iso8601>=0.1.9
+iso8601==0.1.8
 jsonrpclib
 Jinja2
 kombu>=2.4.8
-netaddr>=0.7.6
+netaddr==0.7.5
 python-neutronclient>=2.3.4,<3
 SQLAlchemy>=0.7.8,!=0.9.5,<=0.9.99
 WebOb>=1.2.3
