--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ iso8601>=0.1.9,<=0.1.10
 jsonrpclib
 Jinja2<=2.7.3
 kombu==2.5.16
-netaddr>=0.7.6,<=0.7.14
+netaddr==0.7.5
 python-neutronclient>=2.3.4,<2.3.11
 SQLAlchemy>=0.7.8,!=0.9.5,<=0.9.99
 WebOb==1.2.3
